--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "express-http-to-https": "^1.1.4",
+    "path": "^0.12.7"
   }
 }
